# FIM-EDL

./: .gitignore  README.md  additional_experiments_20260318.md  pyproject.toml  run.py
.github/workflows/: plugin-gate.yml
configs/: config.yaml
configs/experiment/: edl_l0001.yaml  edl_l01.yaml  edl_l1.yaml  iedl_ref.yaml  info_edl.yaml
configs/paper/: README.md  iedl_table2_reference_template.csv  iedl_table3_reference_template.csv  iedl_table4_reference_template.csv
configs/preset/: confirm_fewshot.yaml  confirm_full.yaml  confirm_mnist.yaml  core_repro.yaml  info_edl_beta005_gamma20_fewshot_smoke.yaml  info_edl_beta005_gamma20_fewshot_train.yaml  info_edl_fewshot_cpu_pilot.yaml  info_edl_fewshot_pilot.yaml  paper_cifar_confirm.yaml  paper_cifar_pilot.yaml  paper_fewshot_confirm.yaml  paper_fewshot_pilot.yaml  paper_iedl_cifar_ref.yaml  paper_iedl_cifar_ref_iedl_official.yaml  paper_iedl_cifar_ref_remaining.yaml  paper_iedl_mnist_ref.yaml  paper_iedl_mnist_ref_iedl_official.yaml  paper_iedl_mnist_ref_info_official.yaml  paper_mnist_confirm.yaml  paper_mnist_pilot.yaml  pilot_fewshot.yaml  pilot_full.yaml  pilot_mnist.yaml  quick_smoke.yaml
configs/schema/: results_v1.yaml  results_v2.yaml
docs/: architecture.md  paper_pipeline.md
results/additional_experiments/: latest_rows.csv  manifest.json  summary_mean_std.csv
results/eval/: latest_eval_rows.csv  manifest.json  summary.md  summary_mean_std.csv
results/fewshot/: latest_fewshot_rows.csv  manifest.json  (+1 more)
scripts/: run_info_edl_fewshot_eval.sh
src/: eval.py  eval_fewshot.py  train.py
(+116 files in other folders)
